--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -3,23 +3,25 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
 ruby "<%= RUBY_VERSION %>"
 
+# Core
 gem "active_type", ">= 0.3.2"
-gem "autoprefixer-rails", ">= 5.0.0.1"
 gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
 gem "bootsnap", ">= 1.2.0", require: false
-gem "coffee-rails"<%= gemfile_requirement("coffee-rails") %>
-gem "dotenv-rails", ">= 2.0.0"
-gem "jquery-rails"<%= gemfile_requirement("jquery-rails") %>
-gem "mail", ">= 2.6.3"
-gem "marco-polo"
 gem "pg"<%= gemfile_requirement("pg") %>
-gem "pgcli-rails"
 gem "puma"<%= gemfile_requirement("puma") %>
-gem "rack-canonical-host", "~> 0.2.3"
 gem "rails", "~> <%= Rails.version %>"
-gem "sass-rails"<%= gemfile_requirement("sass-rails") %>
 gem "sidekiq", ">= 4.2.0"
-gem "turbolinks"<%= gemfile_requirement("turbolinks") || ', ">= 2.5.2"' %>
+
+# Configuration
+gem "dotenv-rails", ">= 2.0.0"
+
+# Utils
+gem "marco-polo"
+gem "pgcli-rails"
+
+# Views
+gem "sass-rails"<%= gemfile_requirement("sass-rails") %>
+gem "slim-rails"<%= gemfile_requirement("slim-rails") %>
 
 group :development do
   gem "annotate", ">= 2.5.0"
@@ -28,9 +30,9 @@ group :development do
   gem "binding_of_caller"
   gem "brakeman", require: false
   gem "bundler-audit", ">= 0.5.0", require: false
+  gem "bullet"
   gem "guard", ">= 2.2.2", require: false
-  gem "guard-livereload", require: false
-  gem "guard-minitest", require: false
+  gem "guard-livereload", require: falses
   gem "letter_opener"
   gem "listen"<%= gemfile_requirement("listen") %>
   gem "overcommit", ">= 0.37.0", require: false
@@ -51,5 +53,13 @@ group :development do
 end
 
 group :test do
+  gem "database_cleaner"
+  gem "rspec-rails", "~> 3.8"
   gem "shoulda-matchers", ">= 3.0.1"
+  gem "vcr"
+end
+
+group :development, :test do
+  gem "factory_bot_rails", "~> 4.0"
+  gem "faker"
 end
