--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>RailsStarterKit</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+<%# The "application" layout is the default layout. It extends "base"  %>
+<%# to include things like header, footer, and alerts that are common  %>
+<%# to most (but not all) views.                                       %>
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'hello_vue' %>
-  </head>
+<%= yield %>
 
-  <body>
-    <div id='hello'>
-      {{message}}
-      <app></app>
-    </div>
-  </body>
-</html>
+<% parent_layout "base" %>
