--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,60 +4,46 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "<%= RUBY_VERSION %>"
 
 # Core
-gem "active_type", ">= 0.3.2"
-gem "bcrypt"<%= gemfile_requirement("bcrypt") %>
-gem "bootsnap", ">= 1.2.0", require: false
-gem "pg"<%= gemfile_requirement("pg") %>
-gem "puma"<%= gemfile_requirement("puma") %>
-gem "rails", "~> <%= Rails.version %>"
-gem "sidekiq", ">= 4.2.0"
+gem 'bootsnap', ">= 1.2.0", require: false
+gem 'pg'<%= gemfile_requirement("pg") %>
+gem 'puma'<%= gemfile_requirement("puma") %>
+gem 'rails', "~> <%= Rails.version %>"
+gem 'sidekiq', ">= 4.2.0"
 
 # Configuration
-gem "dotenv-rails", ">= 2.0.0"
-
-# Utils
-gem "marco-polo"
-gem "pgcli-rails"
+gem 'dotenv-rails', '~> 2.7', '>= 2.7.1'
 
 # Views
-gem "sass-rails"<%= gemfile_requirement("sass-rails") %>
-gem "slim-rails"<%= gemfile_requirement("slim-rails") %>
+gem 'sass-rails'<%= gemfile_requirement("sass-rails") %>
+gem 'slim-rails', '~> 3.2'
+
+# Serialization
+gem 'active_model_serializers', '~> 0.10.9'
 
 group :development do
-  gem "annotate", ">= 2.5.0"
-  gem "awesome_print"
-  gem "better_errors"
-  gem "binding_of_caller"
-  gem "brakeman", require: false
-  gem "bundler-audit", ">= 0.5.0", require: false
-  gem "bullet"
-  gem "guard", ">= 2.2.2", require: false
-  gem "guard-livereload", require: false
-  gem 'guard-rspec', require: false
-  gem "letter_opener"
-  gem "listen"<%= gemfile_requirement("listen") %>
-  gem "overcommit", ">= 0.37.0", require: false
-  gem "rack-livereload"
-  gem "rubocop", ">= 0.58.0", require: false
-  gem "simplecov", require: false
-  gem "spring"
-  gem "sshkit", "~> 1.16", require: false
+  gem 'annotate', '~> 2.7', '>= 2.7.4'
+  gem 'awesome_print', '~> 1.8'
+  gem 'better_errors', '~> 2.5', '>= 2.5.1'
+  gem 'brakeman', '~> 4.5', require: false
+  gem 'bundler-audit', '~> 0.6.1', require: false
+  gem 'letter_opener', '~> 1.7'
+  gem 'listen'<%= gemfile_requirement("listen") %>
+  gem 'overcommit', '~> 0.46.0', require: false
+  gem 'rubocop', '~> 0.66.0', require: false
+  gem 'spring', '~> 2.0', '>= 2.0.2'
 <% if gemfile_requirement("spring-watcher-listen") -%>
-  gem "spring-watcher-listen"<%= gemfile_requirement("spring-watcher-listen") %>
+  gem 'spring-watcher-listen'<%= gemfile_requirement("spring-watcher-listen") %>
 <% end -%>
-  gem "terminal-notifier", require: false
-  gem "terminal-notifier-guard", require: false
-<% unless gemfile_requirement("puma") -%>
-  gem "thin", require: false
-<% end -%>
-  gem "xray-rails", ">= 0.1.18"
 end
 
 group :development, :test do
-  gem "database_cleaner"
-  gem "factory_bot_rails", "~> 4.0"
-  gem "faker"
-  gem "rspec-rails", "~> 3.8"
-  gem "shoulda-matchers", ">= 3.0.1"
-  gem "vcr"
+  gem 'bullet', '~> 5.9'
+  gem 'database_cleaner', '~> 1.7'
+  gem 'dox', '~> 1.1', require: false
+  gem 'factory_bot_rails', '~> 5.0', '>= 5.0.1'
+  gem 'faker', '~> 1.9', '>= 1.9.3'
+  gem 'rspec-rails', '~> 3.8', '>= 3.8.2'
+  gem 'shoulda-matchers', '~> 4.0', '>= 4.0.1'
+  gem 'simplecov', '~> 0.16.1', require: false
+  gem 'vcr', '~> 4.0'
 end
