--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -15,6 +15,12 @@ AllCops:
     - Gemfile
     - Rakefile
 
+Style/Documentation:
+  Enabled: false
+
+Layout/IndentationConsistency:
+  EnforcedStyle: rails
+
 Metrics/AbcSize:
   Exclude:
     - "spec/**/*"
@@ -38,6 +44,9 @@ Metrics/MethodLength:
   Exclude:
     - "db/migrate/*"
     - "spec/**/*"
+
+Naming/PredicateName:
+  Enabled: false
 
 Rails:
   Enabled: true
