--- a/circleci/config.yml.tt
+++ b/circleci/config.yml.tt
@@ -31,6 +31,8 @@ jobs:
       - run:
           name: Install dependencies
           command: |
+            gem install bundler --no-document --conservative
+            bundle update --bundler
             bundle install --deployment --jobs=4 --retry=3 --path vendor/bundle
             bundle clean
 
@@ -62,11 +64,7 @@ jobs:
 
       - run:
           name: Run tests
-          command: |
-            bundle exec rake test test:system TESTOPTS="--ci-dir=./reports"
-
-      - store_test_results:
-          path: ./reports
+          command: bundle exec rspec --drb --colour --order rand
 
       - store_artifacts:
           path: ./tmp/screenshots
@@ -75,16 +73,5 @@ jobs:
 workflows:
   version: 2
   commit-workflow:
-    jobs:
-      - build
-  cron-workflow:
-    triggers:
-      - schedule:
-          cron: "0 13 * * 1,2,3,4,5"
-          filters:
-            branches:
-              only:
-                - master
-                - development
     jobs:
       - build
