--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -9,6 +9,9 @@ gem 'pg'<%= gemfile_requirement("pg") %>
 gem 'puma'<%= gemfile_requirement("puma") %>
 gem 'rails', "~> <%= Rails.version %>"
 gem 'sidekiq', ">= 5.2.0"
+<% if gemfile_requirement("webpacker") -%>
+  gem 'webpacker'<%= gemfile_requirement("webpacker") %>
+<% end -%>
 
 # Configuration
 gem 'dotenv-rails', '~> 2.7', '>= 2.7.1'
