Update rubocop template to include new cops by default

--- a/rubocop.yml.tt
+++ b/rubocop.yml.tt
@@ -1,6 +1,7 @@
 AllCops:
   DisplayCopNames: true
   DisplayStyleGuide: true
+  NewCops: enable
   TargetRubyVersion: <%= RUBY_VERSION[/\d+\.\d+/] %>
   Exclude:
     - "bin/*"
@@ -24,6 +25,12 @@ Style/ClassAndModuleChildren:
 Layout/IndentationConsistency:
   EnforcedStyle: indented_internal_methods
 
+Layout/LineLength:
+  Max: 150
+  Exclude:
+    - "config/**/*"
+    - "db/**/*"
+
 Metrics/AbcSize:
   Exclude:
     - "spec/**/*"
@@ -37,12 +44,6 @@ Metrics/BlockLength:
 Metrics/ClassLength:
   Exclude:
     - "spec/**/*"
-
-Metrics/LineLength:
-  Max: 150
-  Exclude:
-    - "config/**/*"
-    - "db/**/*"
 
 Metrics/MethodLength:
   Max: 12
