--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,11 +4,11 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby "<%= RUBY_VERSION %>"
 
 # Core
-gem 'bootsnap', ">= 1.2.0", require: false
+gem 'bootsnap', ">= 1.7.5", require: false
 gem 'pg'<%= gemfile_requirement("pg") %>
 gem 'puma'<%= gemfile_requirement("puma") %>
 gem 'rails', "~> <%= Rails.version %>"
-gem 'sidekiq', ">= 5.2.0"
+gem 'sidekiq', ">= 6.2.1"
 <% if gemfile_requirement("webpacker") -%>
   gem 'webpacker'<%= gemfile_requirement("webpacker") %>
 <% end -%>
@@ -20,16 +20,16 @@ gem 'dotenv-rails', '~> 2.7', '>= 2.7.1'
 gem 'active_model_serializers', '~> 0.10.9'
 
 group :development do
-  gem 'annotate', '~> 2.7', '>= 2.7.4'
+  gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'amazing_print'
-  gem 'better_errors', '~> 2.5', '>= 2.5.1'
-  gem 'brakeman', '~> 4.5', require: false
-  gem 'bundler-audit', '~> 0.6.1', require: false
+  gem 'better_errors', '~> 2.9', '>= 2.9.1'
+  gem 'brakeman', '~> 5.0', require: false
+  gem 'bundler-audit', '~> 0.8.0', require: false
   gem 'letter_opener', '~> 1.7'
   gem 'listen'<%= gemfile_requirement("listen") %>
-  gem 'overcommit', '~> 0.46.0', require: false
-  gem 'rubocop', '~> 0.84.0', require: false
-  gem 'spring', '~> 2.0', '>= 2.0.2'
+  gem 'overcommit', '~> 0.57.0', require: false
+  gem 'rubocop', '~> 1.15', require: false
+  gem 'spring', '~> 2.1', '>= 2.1.1'
 <% if gemfile_requirement("spring-watcher-listen") -%>
   gem 'spring-watcher-listen'<%= gemfile_requirement("spring-watcher-listen") %>
 <% end -%>
@@ -37,12 +37,12 @@ end
 
 group :development, :test do
   gem 'bullet', '~> 6.1'
-  gem 'database_cleaner', '~> 1.7'
-  gem 'dox', '~> 1.1', require: false
-  gem 'factory_bot_rails', '~> 5.0', '>= 5.0.1'
-  gem 'faker', '~> 1.9', '>= 1.9.3'
-  gem 'rspec-rails', '~> 3.8', '>= 3.8.2'
-  gem 'shoulda-matchers', '~> 4.0', '>= 4.0.1'
-  gem 'simplecov', '~> 0.16.1', require: false
-  gem 'vcr', '~> 4.0'
+  gem 'database_cleaner', '~> 2.0'
+  gem 'dox', '~> 2.1', require: false
+  gem 'factory_bot_rails', '~> 6.2'
+  gem 'faker', '~> 2.18'
+  gem 'rspec-rails', '~> 4.0', '>= 4.0.1'
+  gem 'shoulda-matchers', '~> 4.5', '>= 4.5.1'
+  gem 'simplecov', '~> 0.21.2', require: false
+  gem 'vcr', '~> 6.0'
 end
