--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -28,6 +28,7 @@ group :development do
   gem 'letter_opener', '~> 1.7'
   gem 'listen'<%= gemfile_requirement("listen") %>
   gem 'overcommit', '~> 0.57.0', require: false
+  gem 'rails-erd'
   gem 'rubocop', '~> 1.15', require: false
   gem 'spring', '~> 2.1', '>= 2.1.1'
 <% if gemfile_requirement("spring-watcher-listen") -%>
