--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -19,6 +19,9 @@ gem 'dotenv-rails', '~> 2.7', '>= 2.7.1'
 # Serialization
 gem 'active_model_serializers', '~> 0.10.9'
 
+# Documentation
+gem 'apipie-rails', '~> 0.5.19'
+
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'amazing_print'
