Add missing files and configs

--- a/example.env.tt
+++ b/example.env.tt
@@ -11,3 +11,4 @@ SIDEKIQ_WEB_USERNAME=admin
 SIDEKIQ_WEB_PASSWORD=password
 APIPIE_USERNAME=admin
 APIPIE_PASSWORD=password
+SENDING_EMAIL=change@me.com
