--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,7 +1,7 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "<%= RUBY_VERSION %>"
+ruby '<%= RUBY_VERSION %>'
 
 # Authentication and authorization.
 # Remove them if the app does not need the user and auth
@@ -9,8 +9,8 @@ gem 'devise', '~> 4.8', '>= 4.8.1'
 gem 'doorkeeper'
 
 # Core
-gem 'bugsnag', <%= gemfile_requirement('bugsnag') %>
 gem 'bootsnap', ">= 1.7.5", require: false
+gem 'bugsnag'
 gem 'pg'<%= gemfile_requirement("pg") %>
 gem 'puma'<%= gemfile_requirement("puma") %>
 gem 'rack-cors'
@@ -21,10 +21,10 @@ gem 'sidekiq', ">= 6.2.1"
 <% end -%>
 
 # Configuration
-gem 'dotenv-rails', <%= gemfile_requirement('bugsnag') %>
+gem 'dotenv-rails'
 
 # Documentation
-gem 'apipie-rails', <%= gemfile_requirement('bugsnag') %>
+gem 'apipie-rails'
 
 # Serialization
 gem 'active_model_serializers', '~> 0.10.9'
@@ -41,6 +41,7 @@ group :development do
   gem 'letter_opener', '~> 1.7'
   gem 'listen'<%= gemfile_requirement("listen") %>
   gem 'overcommit', '~> 0.57.0', require: false
+  gem 'rails-erd'
   gem 'rubocop', '~> 1.15', require: false
   gem 'rubocop-rspec', require: false
   gem 'rubocop-rails', require: false
