--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -6,13 +6,13 @@ ruby '<%= RUBY_VERSION %>'
 # Core
 gem 'bootsnap', ">= 1.7.5", require: false
 gem 'bugsnag'
-gem 'pg'<%= gemfile_requirement("pg") %>
-gem 'puma'<%= gemfile_requirement("puma") %>
+gem 'pg', '~> 1.3.4'
+gem 'puma', '~> 5.6'
 gem 'rack-cors'
 gem 'rails', "~> <%= Rails.version %>"
 gem 'sidekiq', ">= 6.2.1"
-<% if gemfile_requirement("webpacker") -%>
-  gem 'webpacker'<%= gemfile_requirement("webpacker") %>
+<% if !@options['api'] %>
+gem "sprockets-rails"
 <% end -%>
 
 # Configuration
@@ -24,6 +24,9 @@ gem 'active_model_serializers', '~> 0.10.9'
 # Documentation
 gem 'apipie-rails', '~> 0.5.19'
 
+# Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
+# gem "image_processing", "~> 1.2"
+
 group :development do
   gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'amazing_print'
@@ -31,7 +34,7 @@ group :development do
   gem 'brakeman', '~> 5.0', require: false
   gem 'bundler-audit', '~> 0.8.0', require: false
   gem 'letter_opener', '~> 1.7'
-  gem 'listen'<%= gemfile_requirement("listen") %>
+  gem 'listen', '~> 3.7'
   gem 'overcommit', '~> 0.57.0', require: false
   gem 'rails-erd'
   gem 'rubocop', '~> 1.15', require: false
@@ -43,7 +46,7 @@ end
 
 group :development, :test do
   gem 'byebug'
-  gem 'bullet', '~> 6.1'
+  gem 'bullet', '~> 7.0'
   gem 'database_cleaner', '~> 2.0'
   gem 'dox', '~> 2.1', require: false
   gem 'factory_bot_rails', '~> 6.2'
