--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -1,12 +1,14 @@
-source "https://rubygems.org"
+source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 
-ruby "<%= RUBY_VERSION %>"
+ruby '<%= RUBY_VERSION %>'
 
 # Core
 gem 'bootsnap', ">= 1.7.5", require: false
+gem 'bugsnag'
 gem 'pg'<%= gemfile_requirement("pg") %>
 gem 'puma'<%= gemfile_requirement("puma") %>
+gem 'rack-cors'
 gem 'rails', "~> <%= Rails.version %>"
 gem 'sidekiq', ">= 6.2.1"
 <% if gemfile_requirement("webpacker") -%>
@@ -14,7 +16,7 @@ gem 'sidekiq', ">= 6.2.1"
 <% end -%>
 
 # Configuration
-gem 'dotenv-rails', '~> 2.7', '>= 2.7.1'
+gem 'dotenv-rails'
 
 # Serialization
 gem 'active_model_serializers', '~> 0.10.9'
@@ -40,6 +42,7 @@ group :development do
 end
 
 group :development, :test do
+  gem 'byebug'
   gem 'bullet', '~> 6.1'
   gem 'database_cleaner', '~> 2.0'
   gem 'dox', '~> 2.1', require: false
@@ -49,4 +52,8 @@ group :development, :test do
   gem 'shoulda-matchers', '~> 4.5', '>= 4.5.1'
   gem 'simplecov', '~> 0.21.2', require: false
   gem 'vcr', '~> 6.0'
+end
+
+group :test do
+  gem 'shoulda', '~> 4.0'
 end
