--- a/README.md.tt
+++ b/README.md.tt
@@ -43,7 +43,7 @@ This generator creates all 3 files required for a new api controller(controller,
 
 #### Usage
 
-`rails g api_controller [options][file_name]`
+`rails g api_controller [file_name][options]`
 
  * `file_name` - is required (e.g for test and generates test_controller.rb). It can be also a path to the file like authentication/passwords
  * `options` - is optional
