--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -4,16 +4,29 @@ git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '<%= RUBY_VERSION %>'
 
 # Core
-gem 'bootsnap', ">= 1.7.5", require: false
+gem 'bootsnap', '>= 1.7.5', require: false
 gem 'bugsnag'
-gem 'pg'<%= gemfile_requirement("pg") %>
-gem 'puma'<%= gemfile_requirement("puma") %>
+gem 'pg'<%= gemfile_requirement('pg') %>
+gem 'puma'<%= gemfile_requirement('puma') %>
 gem 'rack-cors'
-gem 'rails', "~> <%= Rails.version %>"
-gem 'sidekiq', ">= 6.2.1"
-<% if gemfile_requirement("webpacker") -%>
-  gem 'webpacker'<%= gemfile_requirement("webpacker") %>
+gem 'rails', '~> <%= Rails.version %>'
+gem 'sidekiq', '>= 6.2.1'
+
+<% if gemfile_requirement('sprockets-rails') -%>
+  gem 'sprockets-rails'<%= gemfile_requirement('sprockets-rails') %>
 <% end -%>
+<% if gemfile_requirement('turbo-rails') -%>
+  gem 'turbo-rails'<%= gemfile_requirement('turbo-rails') %>
+<% end -%>
+<% if gemfile_requirement('stimulus-rails') -%>
+  gem 'stimulus-rails'<%= gemfile_requirement('stimulus-rails') %>
+<% end -%>
+<% if gemfile_requirement('jbuilder') -%>
+  gem 'jbuilder'<%= gemfile_requirement('jbuilder') %>
+<% end -%>
+<% if gemfile_requirement('importmap-rails') -%>
+  gem 'importmap-rails'<%= gemfile_requirement('importmap-rails')%>
+<% end-%>
 
 # Configuration
 gem 'dotenv-rails'
@@ -24,26 +37,30 @@ gem 'active_model_serializers', '~> 0.10.9'
 # Documentation
 gem 'apipie-rails', '~> 0.5.19'
 
+# Use Active Storage variants [https://guides.rubyonrails.org/active_storage_overview.html#transforming-images]
+# gem 'image_processing', '~> 1.2'
+gem 'net-http'
+
 group :development do
-  gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'amazing_print'
+  gem 'annotate', '~> 3.1', '>= 3.1.1'
   gem 'better_errors', '~> 2.9', '>= 2.9.1'
   gem 'brakeman', '~> 5.0', require: false
   gem 'bundler-audit', '~> 0.8.0', require: false
   gem 'letter_opener', '~> 1.7'
-  gem 'listen'<%= gemfile_requirement("listen") %>
+  gem 'listen'<%= gemfile_requirement('listen') %>
   gem 'overcommit', '~> 0.57.0', require: false
   gem 'rails-erd'
   gem 'rubocop', '~> 1.15', require: false
   gem 'spring', '~> 2.1', '>= 2.1.1'
-<% if gemfile_requirement("spring-watcher-listen") -%>
-  gem 'spring-watcher-listen'<%= gemfile_requirement("spring-watcher-listen") %>
+<% if gemfile_requirement('spring-watcher-listen') -%>
+  gem 'spring-watcher-listen'<%= gemfile_requirement('spring-watcher-listen') %>
 <% end -%>
 end
 
 group :development, :test do
+  gem 'bullet', '~> 7.0'
   gem 'byebug'
-  gem 'bullet', '~> 6.1'
   gem 'database_cleaner', '~> 2.0'
   gem 'dox', '~> 2.1', require: false
   gem 'factory_bot_rails', '~> 6.2'
