--- a/Gemfile.tt
+++ b/Gemfile.tt
@@ -41,6 +41,12 @@ gem 'apipie-rails', '~> 0.5.19'
 # gem 'image_processing', '~> 1.2'
 gem 'net-http'
 
+# If you are using the sentry error logging
+# Logging
+# gem 'sentry-ruby'
+# gem 'sentry-rails'
+# gem 'sentry-sidekiq'
+
 group :development do
   gem 'amazing_print'
   gem 'annotate', '~> 3.1', '>= 3.1.1'
